--- a/templates/index.html
+++ b/templates/index.html
@@ -1,22 +1,58 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    {% block styles %}
+        <!-- Bootstrap CSS -->
+        {{ bootstrap.load_css() }}
+    {% endblock %}
     <title>image generator</title>
-</head>
-<body>
-    <h1>Generate image of the desired weight</h1>
-    <form method="POST">
-        <div><label>Image size (1-999 Mb): <input type="number" name="image_size" min="1" max="999"></label></div>
-        <div><label>Image format: <select name="image_type">
-            <option>jpg</option>
-            <option>png</option>
-            </select> </label> </div>
-        <input type="submit" value="Get image">
-    </form>
-    {% if context %}
-    <h4> Generated file format: {{ context.format }} size: {{ context.size }} Mb  </h4>
-    <a href={{ context.url }}> Download file </a>
-    {% endif %}
-</body>
+  </head>
+  <body class="bg-light">
+    <div class="container">
+        <div class="row">
+            <div class="py-4 text-center">
+                <h3 class="display-4">Generate image of the desired size (weight)</h3>
+            </div>
+            <div class="bs-docs-section">
+                    <form class="image-generation" novalidate="" method="POST">
+                        <div class="form-group">
+                            <label for="exampleInputSize">Image size (1-999 Mb):</label>
+                            <input type="number" name="image_size" min="1" max="999" class="form-control" id="exampleInputSize" placeholder="1" value="1" :state="nameState">
+                        <div class="form-group">
+                            <label for="exampleSelect">Image format</label>
+                            <select class="form-control" id="exampleSelect" name="image_type">
+                            <option>jpg</option>
+                            <option>png</option>
+                            </select> </div>
+                        <div class="py-4 text-right">
+                            <input type="submit" class="btn btn-primary" value="Get image">
+                        </div>
+
+                    </form>
+                    {% if context and context != 'Error' %}
+                    <hr class="mb-4">
+                    <div class="alert alert-dismissible alert-warning">
+                        <h4 class="alert-heading">Done</h4>
+                        <p class="mb-0">Generated file format: {{ context.format }} size: {{ context.size }} Mb <a href={{ context.url }} class="alert-link">Download file</a>.</p>
+                    </div>
+                    {% endif %}
+                    {% if context == 'Error' %}
+                    <hr class="mb-4">
+                    <div class="alert alert-dismissible alert-warning">
+                        <h4 class="alert-heading">Error</h4>
+                        <p class="mb-0"> Image size out range </p>
+                    </div>
+                    {% endif %}
+                    {% block scripts %}
+                        <!-- Optional JavaScript -->
+                        {{ bootstrap.load_js() }}
+                    {% endblock %}
+
+            </div>
+        </div>
+    </div>
+
+  </body>
 </html>
